# afboot-stm32

./: CMakeLists.txt
source/: main.c  start_kernel.c
tools/: program.jlink  program.sh
